--- a/index.html
+++ b/index.html
@@ -50,25 +50,36 @@
   </head>
 
   <body>
-    <header>
-      <!-- Add your website name and logo here -->
-      <p>Header</p>
-    </header>
-    <nav>
-      <!-- Add your webiste navigation here -->
-    </nav>
     <main>
-      <!-- Add your main content here -->
       <section>
-        <article>
-          <h1>Heading</h1>
-          <p>Content</p>
-        </article>
+        <div class="content">
+          <h1>Get <span>insights</span> that help your business grow.</h1>
+          <p>
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+          <div class="stats">
+            <div class="category">
+              <h2>10k+</h2>
+              <h3>Companies</h3>
+            </div>
+            <div class="category">
+              <h2>314</h2>
+              <h3>Templates</h3>
+            </div>
+            <div class="category">
+              <h2>12M+</h2>
+              <h3>Queries</h3>
+            </div>
+          </div>
+        </div>
+        <div class="img-container">
+          <img
+            src="./assets/images/image-header-desktop.jpg"
+            alt="business meeting"
+          />
+        </div>
       </section>
     </main>
-    <footer>
-      <!-- Add copyright notices and other footer content here -->
-      <p>Footer</p>
-    </footer>
   </body>
 </html>
