Update: Create flex displays.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       content="https://horoserp.github.io/stats-preview"
     />
     <!-- TODO: Change og:imgae and screenshots in manifest -->
+    <!-- TODO: Fix image height of mobile screenshot (too long) -->
     <meta
       property="og:image"
       content="https://horoserp.github.io/assets/images/desktop-design.jpg"
