--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
     <main>
       <section>
         <div class="content">
-          <h1>Get <span>insights</span> that help your business grow.</h1>
-          <p>
-            Discover the benefits of data analytics and make better decisions
-            regarding revenue, customer experience, and overall efficiency.
-          </p>
+          <div class="text">
+            <h1>Get <span>insights</span> that help your business grow.</h1>
+            <p>
+              Discover the benefits of data analytics and make better decisions
+              regarding revenue, customer experience, and overall efficiency.
+            </p>
+          </div>
           <div class="stats">
             <div class="category">
               <h2>10k+</h2>
