Fix: Add justify-content to section. Add width to content. Change img tag to HTML5 picture tag.

--- a/index.html
+++ b/index.html
@@ -77,10 +77,16 @@
           </div>
         </div>
         <div class="img-container">
-          <img
-            src="./assets/images/image-header-desktop.jpg"
-            alt="business meeting"
-          />
+          <picture>
+            <source
+              media="(max-width: 767px)"
+              srcset="./assets/images/image-header-mobile.jpg"
+            />
+            <img
+              src="./assets/images/image-header-desktop.jpg"
+              alt="business meeting"
+            />
+          </picture>
         </div>
       </section>
     </main>
