Update: Add screenshots.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- TODO: Fix image height of mobile screenshot (too long) -->
     <meta
       property="og:image"
-      content="https://horoserp.github.io/assets/images/desktop-design.jpg"
+      content="https://horoserp.github.io/assets/images/desktop-screenshot.jpeg"
     />
 
     <meta
